[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/screens/HowToPlayScreen.gd" type="Script" id=1]
[ext_resource path="res://src/themes/Theme_01.tres" type="Theme" id=2]
[ext_resource path="res://src/themes/Theme_01_small.tres" type="Theme" id=3]

[node name="HowToPlayScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.545098, 0.509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 800.0
margin_bottom = 45.0
theme = ExtResource( 2 )
text = "How to Play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 71.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox_1" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 21.0
alignment = 1

[node name="Txt_1" type="Label" parent="VBoxContainer/HBox_1"]
margin_left = 398.0
margin_right = 398.0
margin_bottom = 21.0
align = 1

[node name="Img_1" type="TextureRect" parent="VBoxContainer/HBox_1"]
margin_left = 402.0
margin_right = 402.0
margin_bottom = 21.0

[node name="HBox_2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 800.0
margin_bottom = 46.0
alignment = 1

[node name="Txt_2" type="Label" parent="VBoxContainer/HBox_2"]
margin_left = 398.0
margin_right = 398.0
margin_bottom = 21.0
align = 1

[node name="Img_2" type="TextureRect" parent="VBoxContainer/HBox_2"]
margin_left = 402.0
margin_right = 402.0
margin_bottom = 21.0

[node name="HBox_3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 800.0
margin_bottom = 71.0
alignment = 1

[node name="Txt_3" type="Label" parent="VBoxContainer/HBox_3"]
margin_left = 398.0
margin_right = 398.0
margin_bottom = 21.0
align = 1

[node name="Img_3" type="TextureRect" parent="VBoxContainer/HBox_3"]
margin_left = 402.0
margin_right = 402.0
margin_bottom = 21.0

[node name="HBox_Buttons" type="HBoxContainer" parent="."]
margin_top = 146.0
margin_right = 800.0
margin_bottom = 173.0
theme = ExtResource( 3 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Back" type="Button" parent="HBox_Buttons"]
margin_left = 286.0
margin_right = 341.0
margin_bottom = 27.0
text = "Back"

[node name="Button_MainMenu" type="Button" parent="HBox_Buttons"]
margin_left = 345.0
margin_right = 456.0
margin_bottom = 27.0
text = "Main Menu"

[node name="Button_Next" type="Button" parent="HBox_Buttons"]
margin_left = 460.0
margin_right = 514.0
margin_bottom = 27.0
text = "Next"
[connection signal="button_up" from="HBox_Buttons/Button_Back" to="." method="_on_Button_Back_button_up"]
[connection signal="button_up" from="HBox_Buttons/Button_MainMenu" to="." method="_on_Button_MainMenu_button_up"]
[connection signal="button_up" from="HBox_Buttons/Button_Next" to="." method="_on_Button_Next_button_up"]
